# psadt_secure

./: .gitignore  ARCHITECTURE.md  COMPARISON_WITH_PPE_GUARD.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  GUIDE.md  OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_SETUP_GUIDE.md  QUICK_START.md  README.md  README_UPGRADE.md  SECURITY_PATTERNS.md  SETUP.md  SYSTEM_ARCHITECTURE.md  TESTING.md  UPGRADE_COMPLETE.md  UPGRADE_SUMMARY.md  WORKFLOW.md  main.py  pyproject.toml  requirements.txt  scratch_dep.py  test_config.ini
config/: allowlist.yaml  compliance_mapping.yaml  rules.yaml
docs/: ALLOWLIST_POLICY.md  COMPLIANCE_STANDARDS.md  OPERATOR_GUIDE.md  SBOM_GUIDE.md
reports/drawio_final/: findings.json  nvd_cache.db  workflow_state.json
reports/drawio_test/: findings.json  findings_junit.xml  manifest.json  manifest.sig  nvd_cache.db  workflow_state.json
reports/powerbi_banner_test/: findings.json  nvd_cache.db  workflow_state.json
reports/powerbi_final/: findings.json  findings_junit.xml  manifest.json  manifest.sig  nvd_cache.db  workflow_state.json
reports/powerbi_test/: findings.json  findings_junit.xml  manifest.json  manifest.sig  nvd_cache.db  workflow_state.json
src/: __init__.py
src/hemspect/: cli.py
src/hemspect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hemspect/config/: allowlist.yaml
src/hemspect/scanners/: approval_workflow.py  (+3 more)
src/scanners/: __init__.py  approval_workflow.py  report_generator.py  sbom_generator.py  scan_psadt.py
test_report/: nvd_cache.db  nvd_cache.sqlite3  workflow_state.json
(+5 files in other folders)
